# SPK-Kesehatan-Mental

./: .gitignore  README.md  app.py  belajar.md  fuzzy_engine.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
